clusters/titania/apps/signaturepdf/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app.kubernetes.io/instance: signaturepdf
    app.kubernetes.io/name: signaturepdf
    app.kubernetes.io/service: signaturepdf
  name: signaturepdf
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: signaturepdf
    app.kubernetes.io/name: signaturepdf
  type: ClusterIP
